    * Album artist is now guessed for tracks that do not belong into any
      collection and tracks from USB Mass Storage collection. Guessing uses the
      same algorithm as Local Collection.
    * When hovering iPod, UMS or MTP collection in collection browser,
      "1.2 GB free" is shown instead of "85% used"; thicker capacity bar.

  BUGFIXES:
    * Transcoding: fix compatibility with libav's ffmpeg. (BR 300551)
    * Saved lyrics are preserved when the track is moved. (BR 242350)
    * Lyrics, labels and album actions are correctly displayed for tracks
      from main and saved playlists on Amarok startup. (BR 299150)
    * Lyrics applet scrolls more intelligently. Patch by Alexander Potashev.
      (BR 283601)
    * Fix crash on startup related to ContextView. (BR 258741)
    * Fix dragging of "No Labels" and "Various Artists" collection tree items.
    * Don't add duplicates to playlist when dragging from collection. (BR 254411)
    * Fix crash related to DAAP collection. (BR 280774)
    * Fix crash on startup related to Audio CD collection. (BR 256585)
    * When turning dynamic playlist on, immediately populate playlist and clear
      any possible playlist sorting. (BR 220558)
    * Fix transcoding with ffmpeg >= 0.10; patch by Julian Simioni.
    * Fix crash on start when Qt is build with debugging assertions. (BR 285720)
    * Fix URLs in MP3tunes, gpodder.net and Last.fm config dialogs. (BR 299088)
    * Fix drag & drop in playlist layout editor, filename layout editor and
      filter editor for non-english locales. (BR 215402)
    * Fix bug where MySQL password could not be set to 'password'; patch by
      Lachlan Dufton. (BR 272346)
    * Detection and elimination of stale and orphaned iPod tracks now works
      correctly; users are notified about these when iPod is plugged in.
    * iPod playlists now work correctly. (BR 289304)
    * Show correct error when transferring unsupported files to iPod. (BR 234876)